# seattrellis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.en.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: tests.yml
docs/: desktop-research.zh.md  export.zh.md  font-strategy.zh.md  input-format.en.md  input-format.zh.md  project.zh.md  quickstart.en.md  quickstart.zh.md  release-checklist.md  rules.en.md  rules.zh.md  versioning.md  web.zh.md
docs/assets/: demo-seating.html
examples/: classroom.json  project.seattrellis.json  rules.json  rules_multi_candidate.json  students.csv  students.xlsx
examples/candidates/: README.md
examples/history/: README.md  week1.snapshot.json  week2.snapshot.json  week3.snapshot.json
examples/invalid/: conflicting_fixed_seats.json  duplicate_seat_id.json  duplicate_student_id.csv  not_enough_seats.json  unknown_student_rule.json
src/seattrellis/: __init__.py  candidates.py  cli.py  demo.py  history.py  optional.py  presets.py  scoring.py  service.py  service_types.py
src/seattrellis/exporters/: __init__.py  docx_export.py  excel.py  html.py  pdf.py  png.py  print_html.py
src/seattrellis/io/: __init__.py  json_files.py  project.py  students.py  validation.py
src/seattrellis/models/: __init__.py  candidate.py  history.py  layout.py  project.py  rules.py  snapshot.py  student.py
src/seattrellis/solver/: __init__.py  adjacency.py  cp_sat.py  result.py
src/seattrellis/web/: app.py  components.py  workflow.py
tests/: test_adjacency.py  test_candidates.py  test_cli.py  test_exporters.py  test_history.py  test_importers.py  test_minimal_install.py  test_models.py  test_optional_dependencies.py  test_presets.py  test_project.py  test_property_based.py  test_scoring.py  test_solver_basic.py  test_solver_rules.py  test_validation.py  test_web_workflow.py
tests/fixtures/: classroom.json  rules.json  students.csv
