[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seattrellis"
version = "0.1.0"
description = "A privacy-first classroom seating planner for fair, constraint-based, and reproducible seat arrangements."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Frank Fu" }]
keywords = ["classroom", "seating", "optimization", "privacy", "fairness", "ortools", "streamlit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = [
  "pydantic>=1.10,<3",
  "ortools>=9.8",
  "typer>=0.9",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "Pillow>=9.4",
]

[project.optional-dependencies]
web = ["streamlit>=1.30"]
dev = ["pytest>=7.0"]

[project.scripts]
seattrellis = "seattrellis.cli:main"
seatplanner = "seattrellis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
