[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seattrellis"
version = "0.4.0"
description = "A privacy-first classroom seating planner for fair, constraint-based, and reproducible seat arrangements."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Frank Fu" }]
keywords = ["classroom", "seating", "optimization", "privacy", "fairness", "ortools", "streamlit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = [
  "pydantic>=1.10,<3",
  "typer>=0.9",
]

[project.optional-dependencies]
solver = ["ortools>=9.8,<9.15"]
excel = ["openpyxl>=3.1"]
image = ["Pillow>=9.4"]
web = ["streamlit>=1.30"]
dev = ["pytest>=7.0", "build>=1.2"]
all = [
  "ortools>=9.8,<9.15",
  "openpyxl>=3.1",
  "Pillow>=9.4",
  "streamlit>=1.30",
]

[project.scripts]
seattrellis = "seattrellis.cli:main"
seatplanner = "seattrellis.cli:main"

[project.urls]
Homepage = "https://github.com/FrankFu916/seattrellis"
Repository = "https://github.com/FrankFu916/seattrellis"
Issues = "https://github.com/FrankFu916/seattrellis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
